ENEX FSL/snapshotDownload (1)/objects/ServiceTerritory.object
<CustomObject><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableFeeds>false</enableFeeds><externalSharingModel>Private</externalSharingModel><fields><fullName>Caso__c</fullName><deleteConstraint>SetNull</deleteConstraint><externalId>false</externalId><label>Caso</label><referenceTo>Case</referenceTo><relationshipLabel>Territorios de servicios</relationshipLabel><relationshipName>Territorios_de_servicios</relationshipName><required>false</required><trackHistory>false</trackHistory><type>Lookup</type></fields><fields><fullName>FSL__Hide_Emergency_Map__c</fullName><defaultValue>false</defaultValue><deprecated>false</deprecated><description>Determines if the map will be shown on the emergency wizard</description><externalId>false</externalId><label>Hide Emergency Map</label><trackHistory>false</trackHistory><type>Checkbox</type></fields><fields><fullName>FSL__Internal_SLR_Geolocation__c</fullName><deprecated>false</deprecated><displayLocationInDecimal>true</displayLocationInDecimal><externalId>false</externalId><label>Internal SLR HomeAddress Geolocation</label><required>false</required><scale>6</scale><trackHistory>false</trackHistory><type>Location</type></fields><fields><fullName>FSL__NumberOfServicesToDripFeed__c</fullName><deprecated>false</deprecated><externalId>false</externalId><label>Number Of Services To Drip Feed</label><precision>7</precision><required>false</required><scale>0</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique></fields><fields><fullName>FSL__O2_Enabled__c</fullName><defaultValue>false</defaultValue><deprecated>false</deprecated><description>Determines if enhanced scheduling and optimization engine is used</description><externalId>false</externalId><label>Use enhanced scheduling and optimization</label><trackHistory>false</trackHistory><type>Checkbox</type></fields><fields><fullName>FSL__Service_Cluster_Min_Size__c</fullName><deprecated>false</deprecated><externalId>false</externalId><label>Service Cluster Min Size (Closed Pilot)</label><precision>18</precision><required>false</required><scale>0</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique></fields><fields><fullName>FSL__Service_Cluster_Proximity__c</fullName><deprecated>false</deprecated><externalId>false</externalId><label>Service Cluster Proximity (Closed Pilot)</label><precision>6</precision><required>false</required><scale>3</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique></fields><fields><fullName>FSL__System_Jobs__c</fullName><deprecated>false</deprecated><externalId>false</externalId><label>System Jobs</label><required>false</required><trackHistory>false</trackHistory><type>MultiselectPicklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>BATCH_ServicesInJeopardy</fullName><default>false</default><label>BATCH_ServicesInJeopardy</label></value><value><fullName>BATCH_ServicesDispatched</fullName><default>false</default><label>BATCH_ServicesDispatched</label></value><value><fullName>ChatterNotification</fullName><default>false</default><label>ChatterNotification</label></value></valueSetDefinition></valueSet><visibleLines>4</visibleLines></fields><fields><fullName>FSL__TerritoryLevel__c</fullName><deprecated>false</deprecated><externalId>false</externalId><label>Territory Level</label><precision>14</precision><required>false</required><scale>0</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique></fields><fields><fullName>Regi_n__c</fullName><externalId>false</externalId><label>Región</label><required>false</required><trackHistory>false</trackHistory><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>I Tarapacá</fullName><default>false</default><label>I Tarapacá</label></value><value><fullName>II Antofagasta</fullName><default>false</default><label>II Antofagasta</label></value><value><fullName>III Atacama</fullName><default>false</default><label>III Atacama</label></value><value><fullName>IV Coquimbo</fullName><default>false</default><label>IV Coquimbo</label></value><value><fullName>V Valparaíso</fullName><default>false</default><label>V Valparaíso</label></value><value><fullName>VI Libertador General Bernardo O’Higgins</fullName><default>false</default><label>VI Libertador General Bernardo O’Higgins</label></value><value><fullName>VII  Maule</fullName><default>false</default><label>VII  Maule</label></value><value><fullName>VIII Biobío</fullName><default>false</default><label>VIII Biobío</label></value><value><fullName>IX  La Araucanía</fullName><default>false</default><label>IX  La Araucanía</label></value><value><fullName>X Los Lagos</fullName><default>false</default><label>X Los Lagos</label></value><value><fullName>XI Aysén del General Carlos Ibáñez del Campo</fullName><default>false</default><label>XI Aysén del General Carlos Ibáñez del Campo</label></value><value><fullName>XII Magallanes y Antártica Chilena</fullName><default>false</default><label>XII Magallanes y Antártica Chilena</label></value><value><fullName>XIII Metropolitana de Santiago</fullName><default>false</default><label>XIII Metropolitana de Santiago</label></value><value><fullName>XIV Los Ríos</fullName><default>false</default><label>XIV Los Ríos</label></value><value><fullName>XV Arica y Parinacota</fullName><default>false</default><label>XV Arica y Parinacota</label></value><value><fullName>XVI Ñuble</fullName><default>false</default><label>XVI Ñuble</label></value></valueSetDefinition></valueSet></fields><listViews><fullName>MDA</fullName><columns>Name</columns><columns>LAST_UPDATE</columns><columns>LastModifiedBy</columns><columns>ParentTerritory</columns><columns>OperatingHours</columns><columns>IsActive</columns><filterScope>Everything</filterScope><filters><field>Name</field><operation>contains</operation><value>MDA</value></filters><label>MDA</label></listViews><listViews><fullName>My_ServiceTerritories</fullName><filterScope>Mine</filterScope><label>Mis territorios de servicios</label></listViews><listViews><fullName>SGME</fullName><columns>Name</columns><columns>LAST_UPDATE</columns><columns>LastModifiedBy</columns><columns>ParentTerritory</columns><columns>OperatingHours</columns><columns>IsActive</columns><filterScope>Everything</filterScope><filters><field>Name</field><operation>startsWith</operation><value>SGME</value></filters><label>SGME</label><language>es</language><sharedTo><role>Administrador_Estaciones_de_Servicio_SGME</role></sharedTo></listViews><listViews><fullName>SGMM</fullName><columns>Name</columns><columns>LAST_UPDATE</columns><columns>LastModifiedBy</columns><columns>ParentTerritory</columns><columns>OperatingHours</columns><columns>IsActive</columns><filterScope>Everything</filterScope><filters><field>Name</field><operation>startsWith</operation><value>SGMM</value></filters><label>SGMM</label><language>es</language><sharedTo><role>Administrador_Mineria_SGMM</role></sharedTo></listViews><sharingModel>Private</sharingModel></CustomObject>